fixed pause menu visibility
it would be invisible when a bright star would be in the background (white and white yeah)

The transparent black layer help telling them apart

--- a/src/styles/pauseMenu/index.scss
+++ b/src/styles/pauseMenu/index.scss
@@ -16,12 +16,12 @@
 //  along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 #pauseMask {
-    z-index: 40;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: transparent;
-    backdrop-filter: blur(4px);
+  z-index: 40;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(4px);
 }
